Fixed zml file format.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
+language: bash
+
 os: osx
- install:
-   - brew install idris
- script:
-   - ./project --testCI
+install:
+  - brew install idris
+script:
+  - ./project --testCI
