--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
-language: Haskell
+language: haskell
+
+before_install:
+  - cabal update
 
 install:
   - cabal install idris
+
 script:
   - ./project --testCI
