--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
-language: generic
+language: haskell
 
-os: osx
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq libgc-dev
+  - sudo apt-get install -qq libghc-unordered-containers-dev libghc-mtl-dev libghc-network-dev libghc-xml-dev libghc-transformers-dev libghc-text-dev libghc-utf8-string-dev libghc-vector-dev libghc-split-dev libghc-ansi-terminal-dev libghc-ansi-wl-pprint-dev
+  - cabal install alex-3.1.3
+  - cabal install idris
 
 install:
-  - brew install idris
+  - cabal install 
+  - ghc-pkg list
 
 script:
   - ./project --testCI
