--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,5 @@ sudo: required
 services:
   - docker
 
-before_install:
-  - docker pull pheymann/idris-travis:test
-
 script:
-  - docker run -v $(pwd):/var/idris-project pheymann/idris-travis:test ./project --testCI
+  - docker run -v $(pwd):/var/idris-project pheymann/idris-travis:1.0 ./project --testCI
